fix: reduce extra white space below banner image on mobile

--- a/CSS/mediaQ.css
+++ b/CSS/mediaQ.css
@@ -452,9 +452,15 @@
 
     /*=======BANNER=======*/
 
+    #BannerContainer {
+        min-height: 100vh;
+        overflow: hidden;
+    }
+
 
     .BannerText {
         align-items: start;
+        justify-content: center;
         margin-top: 0px;
         width: 100vw;
         padding-left: 30px;
@@ -474,7 +480,7 @@
 
     .BannerText h3 {
         width: 250px;
-        height: 60px;
+        height: auto;
         font-size: 13px;
         text-align: start;
     }
@@ -482,10 +488,10 @@
 
     .imgBanner {
         position: relative;
-        right: 0px;
         left: 78px;
-        bottom: 248px;
-        height: 500px;
+        bottom: 180px;
+        margin-bottom: -220px;
+        height: auto;
         overflow: hidden;
     }
 
